--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.0.2",
-    "@angular/common": "7.0.2",
-    "@angular/compiler": "7.0.2",
-    "@angular/compiler-cli": "7.0.2",
-    "@angular/core": "7.0.2",
-    "@angular/forms": "7.0.2",
-    "@angular/http": "7.0.2",
-    "@angular/platform-browser": "7.0.2",
-    "@angular/platform-browser-dynamic": "7.0.2",
-    "@angular/platform-server": "7.0.2",
-    "@angular/router": "7.0.2",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.5.7",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "zone.js": "^0.8.26"
+    "@angular/animations": "^10.1.2",
+    "@angular/cli": "^10.1.2",
+    "@angular/common": "^10.1.2",
+    "@angular/compiler": "^10.1.2",
+    "@angular/core": "^10.1.2",
+    "@angular/forms": "^10.1.2",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^10.1.2",
+    "@angular/platform-browser-dynamic": "^10.1.2",
+    "@angular/platform-server": "^10.1.2",
+    "@angular/router": "^10.1.2",
+    "bootstrap": "^4.5.2",
+    "core-js": "^3.6.5",
+    "leaflet": "1.7.1",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
+    "zone.js": "^0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.4",
-    "@angular/cli": "^7.0.4",
-    "@angular/compiler-cli": "7.0.2",
-    "@types/jasmine": "2.8.11",
-    "@types/node": "~10.12.2",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "@angular-devkit/build-angular": "~0.13.9",
+    "@angular/cli": "^10.1.2",
+    "@angular/compiler-cli": "^10.1.2",
+    "@types/jasmine": "3.5.14",
+    "@types/node": "~14.11.1",
+    "codelyzer": "~6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.2.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "node-sass": "^4.14.1",
-    "protractor": "~5.4.1",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.6"
+    "protractor": "~7.0.0",
+    "ts-node": "~9.0.0",
+    "tslint": "~6.1.3",
+    "typescript": "4.0.3"
   }
 }
