--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "7.0.2",
     "@angular/compiler-cli": "7.0.2",
     "@angular/core": "7.0.2",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "7.0.2",
     "@angular/http": "7.0.2",
     "@angular/platform-browser": "7.0.2",
@@ -25,12 +26,13 @@
     "@angular/router": "7.0.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.7",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
+    "firebase": "^4.12.1",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.4",
+    "@angular-devkit/build-angular": "~0.13.9",
     "@angular/cli": "^7.0.4",
     "@angular/compiler-cli": "7.0.2",
     "@types/jasmine": "2.8.11",
