--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@angular/common": "^10.1.2",
     "@angular/compiler": "^10.1.2",
     "@angular/core": "^10.1.2",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "^10.1.2",
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^10.1.2",
     "@angular/platform-browser-dynamic": "^10.1.2",
     "@angular/platform-server": "^10.1.2",
     "@angular/router": "^10.1.2",
+    "angularfire2": "5.0.0-rc.12",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
+    "firebase": "^7.21.0",
     "leaflet": "1.7.1",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
