--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser-dynamic": "^10.1.2",
     "@angular/platform-server": "^10.1.2",
     "@angular/router": "^10.1.2",
+    "@asymmetrik/ngx-leaflet": "^7.0.1",
+    "@types/leaflet": "^1.5.17",
     "angularfire2": "5.0.0-rc.12",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "firebase": "^7.21.0",
-    "leaflet": "1.7.1",
+    "leaflet": "^1.7.1",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.6.3",
     "zone.js": "^0.11.1"
